# neuro_handbook

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  aim.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: further-reading.md  glossary.md  index.md
docs/ai/: classical-ml.md  deep-learning.md  evaluation.md  foundation-models.md  index.md  training-mechanics.md
docs/analysis/: asymmetry.md  ct.md  diffusion.md  eeg-meg.md  functional.md  group-stats.md  index.md  multiple-comparisons.md  network-metrics.md  structural.md  surface.md
docs/bids/: datalad.md  derivatives.md  dicom-to-bids.md  index.md  pitfalls.md  pybids.md  validation.md
docs/career/: conferences.md  grant-writing.md  index.md  methods-writing.md  transitions.md
docs/clinical/: stroke-and-tbi.md
docs/computing/: cloud.md  containers.md  dependencies.md  editor.md  gpus.md  hpc-slurm.md  index.md  python-stack.md  reproducibility.md
docs/data-engineering/: cicd.md  concepts.md  dag.md  dwi-case-study.md  exercises.md  five-pillars.md  foundations.md  hpc-to-industry.md  index.md  performance.md  portfolio-roadmap.md  reliability.md  testing.md  tooling.md
docs/fundamentals/: coordinate-systems.md  file-formats.md  index.md  modalities.md  preprocessing.md
docs/getting-started/: first-bids-app.md  first-figure.md  first-nifti.md  index.md  install.md
docs/governance/: privacy-and-hipaa-gdpr.md
docs/landmark/: atlases.md  bids-apps.md  datasets.md  index.md  papers.md  pipelines.md
docs/paths/: index.md
docs/tools/: clinical-deployment.md  index.md  viz-and-eda.md
docs/tutorials/: capstone.md  (+5 more)
examples/: 01_walk_bids.py  02_emit_manifest.py  03_run_mini_dag.py
tests/: conftest.py  test_bids_walker.py  test_manifest.py  test_pipeline_dag.py  test_qc_metrics.py
(+73 files in other folders)
