[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "neuro-handbook"
version = "0.1.0"
description = "NeuroStack — the open neuroimaging handbook. Fundamentals, BIDS, analysis, data engineering, AI/ML, computing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NeuroStack contributors" }]
keywords = ["neuroimaging", "bids", "dicom", "nifti", "data-engineering", "mri"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
neuro = [
    "nibabel>=5.2",
    "pybids>=0.16",
]

[project.urls]
Homepage = "https://github.com/phindagijimana/neuro_handbook"
Documentation = "https://phindagijimana.github.io/neuro_handbook/"
Source = "https://github.com/phindagijimana/neuro_handbook"

[project.scripts]
neuro-handbook = "neuro_handbook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuro_handbook"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
